# mrover-workspace

./: = readmatrix('colors.csv', 'Range', 'A1');  CODEOWNERS  output.txt  test  test.pcd  test.txt  time_logs.txt
ansible/roles/base_station_networks/files/: disable-enp2s0.conf
beaglebone/imu/src/: __main__.py
config/filter/: config.json
config/percep/: config.json
jetson/mesonTest/: meson.build  prog.cu
jetson/mesonTest/modules/: meson.build
jetson/mesonTest/test/modules/: prog.cu
jetson/mesonTest/test/version_reqs/: prog.cu
jetson/mesonTest/version_reqs/: meson.build
jetson/percep/: .main.cpp.swp  CMakeCache.txt  README.md  Timer.hpp  accuracyInput.txt  artag_detector.cpp  artag_detector.hpp  camera.cpp  camera.hpp  config.h.in  display.cpp  display.hpp  display2.cpp  display2.hpp  driver.cpp  main.cpp  mapping.cpp  mapping.hpp  meson.build  meson_options.txt  odom.txt  pcl.cpp  pcl.hpp  pcl_gpu.cpp  perception.hpp  record.txt  temp.cpp  test-kernel.cu  testOutput.txt  test_protocol.md  timer.py  timerOutput.txt
jetson/percep/deprecated/: obstacle_detector.cpp  tennisball_detector.cpp
jetson/percep_obs_detect/include/: euclidean-cluster.hpp  path-finder.hpp  plane-ransac.hpp
jetson/percep_obs_detect/src/: euclidean-cluster.cu  obs-detector.cpp  path-finder.cu  plane-ransac.cu
jetson/perception-gpu-obs-detector/: meson.build
jetson/perception-gpu-obs-detector/src/: obs-detector.cpp
jetson/testFolder/: testCode.py  timer.py
pip_deps/: jetson_requirements.txt
rover_msgs/: IMUData.lcm  Obstacle.lcm
(+7 files in other folders)
