project('jetson_mesonTest', 'cuda', version : '1.0.0')

#cuda_comp = meson.get_compiler('cuda')
#cuda = import('unstable-cuda')

#cuda = dependency('cuda', version : '>=10', modules : ['cublas'])
#all_deps = [cuda]

exe = executable('jetson_mesonTest', 'prog.cu', install : true)
#test('cudatest', exe)
