project('jetson_obs_detector', 'cuda', version : '1.0.0')

#cuda_comp = meson.get_compiler('cuda')
#cuda = import('unstable-cuda')

#cuda = dependency('cuda', version : '>=10', modules : ['cublas'])
#all_deps = [cuda]


#incdir = include_directories('../include/')
#zed_dep = dependency('ZED', method : 'auto')

exe = executable('jetson_obs_detector', 'src/obs-detector.cpp', install : true)
